# TopoFlow

./: .gitignore  ANALYZE_CHECKPOINT_LOADING.py  ANIMATIONS_README.md  ARCHITECTURE_DIAGRAM.md  ARCHITECTURE_FIXED_OCT13.md  ARCHITECTURE_VERIFICATION.md  AUTOPILOT_STATUS.md  BUG_NCCL_INIT_HANG.md  CHECK_ALL_BLOCKS.py  CHECK_ALL_STATUS.sh  CHECK_BLOCK0_DIFFERENCE.py  CHECK_CHECKPOINT_EXPECTS_NORMALIZED.py  CHECK_NORMALIZATION.py  CHECK_STATUS.sh  CHECK_WEIGHT_NAMES.py  CODE_FOR_SUPERVISOR_1_WIND_SCANNING.py  CODE_FOR_SUPERVISOR_2_ELEVATION_ATTENTION.py  COMPARE_CHECKPOINT_VS_MODEL.py  COMPLETE_FLOW_ANALYSIS.md  CONCLUSION_FINALE.md  CORRECT_VALIDATION_TEST.py  CRITICAL_FINDINGS.md  DEBUG_DATA.py  DEBUG_ELEVATION_VALUES.py  DEBUG_ELEV_SIMPLE.py  DEBUG_PREDICTIONS.py  DEBUG_SUMMARY.md  DEBUG_WEIGHTS.py  DEBUG_WEIGHTS_LOADING.py  DEEP_CHECKPOINT_ANALYSIS.py  DIAGNOSTIC_FINAL.md  ELEVATION_ATTENTION_SUMMARY.md  ELEVATION_MASK_CLEANED.md  ELEVATION_MASK_EXPERIMENT_SUMMARY.md  EXPECTED_LOSS.md  EXPERIMENT_PLAN.md  EXPERIMENT_STATUS.md  EXTRACT_NORMALIZATION_STATS.py  FINAL_CHECK_BEFORE_RUN.py  FINAL_SUMMARY.txt  (+237 more)
configs/: config_all_pollutants.yaml  config_full_model.yaml  config_innovation1.yaml  config_innovation2.yaml  config_nowind_test.yaml  config_quick_test.yaml  config_wind_baseline.yaml  config_wind_physics.yaml  default.yaml
docs/: ARCHITECTURE.md  README.md  architecture.md  index.html  script.js  style.css
scripts/: autopilot_monitor.sh  evaluate.py  generate_website_visuals.py  monitor_and_evaluate.sh  monitor_fast.sh  monitor_physics.sh  precompute_wind_cache.py  precompute_wind_cache_ddp.py  run_topoflow_ablation.sh  slurm_baseline_no_physics.sh  slurm_continue_baseline.sh  slurm_full_model.sh  slurm_full_topoflow.sh  train.py  (+13 more)
(+33 files in other folders)
